add game level, timer goes faster with higher level

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 @import "./game-over.css";
 @import "./game.css";
+@import "./level.css";
 @import "./player.css";
 @import "./score.css";
 @import "./timer.css";
